Modularize flight-core